<resources>
    <string name="app_name">F-GreenBox</string>
    <string name="tradition_title">Tradition</string>
    <string name="hydroponics_title">Hytroponics</string>
    <string name="action_settings">Settings</string>
    <string name="temperature_soil">Temperature:</string>
    <string name="humidity_soil">Humidity:</string>
    <string name="case_one">Case 1</string>
    <string name="case_two">Case 2</string>
    <string name="case_three">Case 3</string>
    <string name="water_button">Water</string>
    <string name="warm_button">Warm</string>
    <string name="cool_down_button">Cool Down</string>
    <string name="led_light">Led Lights</string>
    <string name="case_selector">Select case number:</string>
    <string name="temperature_hydroponics">Temperature:</string>
    <string name="ph_hydroponics">pH:</string>
    <string name="error">Error!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
</resources>
